--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ac8cda">  <td>17/01/30 16:18:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(api.testng.CucumberFeatureWrapper)[pri:0, instance:runner.RunCukesTest@6611d7b8]">feature</td> 
-  <td>main@605092857</td>   <td></td> </tr>
-<tr bgcolor="ac8cda">  <td>17/01/30 16:18:23</td>   <td>-421</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:runner.RunCukesTest@6611d7b8]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@605092857</td>   <td></td> </tr>
-<tr bgcolor="ac8cda">  <td>17/01/30 16:19:32</td>   <td>68611</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runner.RunCukesTest@6611d7b8]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@605092857</td>   <td></td> </tr>
+<tr bgcolor="ef9b8b">  <td>17/02/02 12:13:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(api.testng.CucumberFeatureWrapper)[pri:0, instance:runner.RunCukesTest@2e8d404]">feature</td> 
+  <td>TestNG@558024867</td>   <td></td> </tr>
+<tr bgcolor="ef9b8b">  <td>17/02/02 12:13:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(api.testng.CucumberFeatureWrapper)[pri:0, instance:runner.RunCukesTest@63041bb7]">feature</td> 
+  <td>TestNG@2082336672</td>   <td></td> </tr>
+<tr bgcolor="ef9b8b">  <td>17/02/02 12:13:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(api.testng.CucumberFeatureWrapper)[pri:0, instance:runner.RunCukesTest@4eef9712]">feature</td> 
+  <td>TestNG@377973822</td>   <td></td> </tr>
+<tr bgcolor="ef9b8b">  <td>17/02/02 12:13:48</td>   <td>-642</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:runner.RunCukesTest@63041bb7]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@2082336672</td>   <td></td> </tr>
+<tr bgcolor="ef9b8b">  <td>17/02/02 12:13:48</td>   <td>-595</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:runner.RunCukesTest@4eef9712]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@377973822</td>   <td></td> </tr>
+<tr bgcolor="ef9b8b">  <td>17/02/02 12:13:48</td>   <td>-561</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:runner.RunCukesTest@2e8d404]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@558024867</td>   <td></td> </tr>
+<tr bgcolor="ef9b8b">  <td>17/02/02 12:14:16</td>   <td>28088</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runner.RunCukesTest@63041bb7]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@2082336672</td>   <td></td> </tr>
+<tr bgcolor="ef9b8b">  <td>17/02/02 12:14:16</td>   <td>28129</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runner.RunCukesTest@4eef9712]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@377973822</td>   <td></td> </tr>
+<tr bgcolor="ef9b8b">  <td>17/02/02 12:14:20</td>   <td>31758</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runner.RunCukesTest@2e8d404]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@558024867</td>   <td></td> </tr>
 </table>
