--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>cucumber</td><td>AbstractTestNGCucumberTests.feature(api.testng.CucumberFeatureWrapper)[pri:0, instance:runner.RunCukesTest@6611d7b8]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>cucumber</td><td>AbstractTestNGCucumberTests.feature(api.testng.CucumberFeatureWrapper)[pri:0, instance:runner.RunCukesTest@63041bb7]<br/>AbstractTestNGCucumberTests.feature(api.testng.CucumberFeatureWrapper)[pri:0, instance:runner.RunCukesTest@4eef9712]<br/>AbstractTestNGCucumberTests.feature(api.testng.CucumberFeatureWrapper)[pri:0, instance:runner.RunCukesTest@2e8d404]<br/></td></tr>
 </table>
